force-app/main/default/objects/Historico_Oportunidade__c/Historico_Oportunidade__c.object-meta.xml
<CustomObject>
    <description>Armazena o histórico de contato com esta oportunidade - persiste os dados do lead pra cá.</description>
    <label>Histórico Oportunidade</label>
    <nameField>
        <label>Título</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histórico Oportunidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>