force-app/main/default/objects/Historico_Oportunidade__c/fields/Data_da_Alteracao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Alteracao__c</fullName>
    <label>Data e Hora da Alteração</label>
    <type>DateTime</type>
</CustomField>