force-app/main/default/objects/Historico_Oportunidade__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Historico_Oportunidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>