force-app/main/default/objects/Historico_Oportunidade__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Historico_Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>